# mini-ERP

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.MD  db.sqlite3  docker-compose.yml  initial_data.json  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
api/: authentication.py  conftest.py  custom_pagination.py  filters.py  serializers.py  urls.py  views.py
api/serializers/: common.py  employee.py  finance.py  hardware.py
api/views/: common.py  employee.py  finance.py  hardware.py
common/: admin.py  decorators.py  forms.py  functions.py  models.py  permissions.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_create_initial_objects.py
common/templatetags/: auth_tags.py
employee/: admin.py  filters.py  forms.py  functions.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
employee/fixtures/: employee_app_setting.json
employee/migrations/: 0001_initial.py  0002_alter_employee_options.py  0002_employeeappsettings.py  0003_alter_historicalemployee_options_and_more.py  0003_rename_employeeappsettings_employeeappsetting.py
employee/templatetags/: custom_emp_id_to_name_tag.py
employee/tests/: test_views.py
finance/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
finance/migrations/: 0001_initial.py  0002_alter_payment_invoice_doc.py
finance/templatetags/: custom_finance_tags.py
hardware/: admin.py  apps.py  filters.py  forms.py  functions.py  models.py  resources.py  serializers.py  signals.py  tasks.py  test.py  urls.py  views.py
hardware/fixtures/: hardware_app_setting.json
hardware/migrations/: 0001_initial.py  0002_auto_20221127_2150.py  0002_designation_dept_id.py  0002_historicallaptop_laptop_owner_type_and_more.py  (+52 more)
minierp/: asgi.py  celery.py  decorators.py  settings.py  urls.py  views.py  wsgi.py
staticfiles/: staticfiles.json
templates/: 403.html  admin_panel_home.html  dashboard.html  login.html  main.html  navbar.html  settings.html
(+119 files in other folders)
